--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Test
-        run: docker compose run --rm app sh -c "./wait-for-db.sh && python manage.py test"
+        run: docker compose run --rm app sh -c "sh ./wait-for-db.sh && python manage.py test"
 
       - name: Lint
         run: docker compose run --rm app sh -c "flake8"
